website/css/racing-groups.css
/* global.css sets a specific size */
.block_buttons h3 span {
  font-size: 1em;
}

div#race-rules, ul#all-groups {
  width: 400px;
  margin-left: 10px;
}

div.switch label {
  width: 285px;
  display: inline-block;
}
div#race-rules .flipswitch {
  /* float: right; */
}

p.instructions {
  margin-left: 25px;
}

li#new-group {
  font-style: italic;
  text-align: center;
}

ul#all-groups, ul#all-groups ul,
ul#aggregate-groups, ul#aggregate-groups ul {
  list-style-type: none;
  padding-inline-start: 10px;
}

li.group, li.aggregate {
  border: 2px #404040 solid;
  padding: 0px;
  margin-top: 4px;
}

li.subgroup {
  border: 1px #808080 solid;
  padding: 0px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-right: 2px;
}

li.partition {
  margin-top: 10px;
  margin-bottom: 5px;
}

.group-color, .subgroup-color, .partition-color {
  display: inline-block;
  width: 1em;
  border: 1px #404040 solid;
  margin-top: 2px;
}

li.group > p, .group-color {
  background-color: #8da5c6;
}
li.aggregate > p {
  background-color: #72c5ac;
}
li.group p, li.aggregate p {
  font-size: inherit;
  padding: 3px;
  margin: 0px;
}

li.subgroup > p, .subgroup-color {
  background-color: #b2cdf2;
}
li.subgroup p {
  margin: 0px;
}
li.new-subgroup p {
  text-align: center;
  font-style: italic;
}
  
li.partition > p, .partition-color {
  background-color: #939191;
}

li.incomplete > p {
  /* border: dashed black 1px; */
  background: linear-gradient(to right,
                              rgb(147, 145, 145, 1),
                              rgb(147, 145, 145, 1) 50%,
                              rgb(147, 145, 145, 0));
}

li.partition p {
  color: white;
  padding-left: 10px;
  margin-right: 10px;
}

li.constituent {
}
li.constituent p {
}
  
li.ui-droppable-hover, p.ui-droppable-hover, div.ui-droppable-hover {
  background-color: #ffcccc;
  border: #ff0000 4px solid;
}

span.label, span.count {
  float: right;
  margin-right: 5px;
  font-variant: small-caps;
  text-align: right;
}

input.edit-button {
  float: right;
  /* display: inline-block; */
  background: black;
  color: white;
  border-radius: 0.4em;
  text-decoration: none;
  line-height: 1.0;
  font-size: inherit;
  margin: 0px;
  border: none;
}

/* li's for subgroups don't extend quite as far to the right as li's for groups;
   adding some margin for the group edit buttons helps line them up with edit buttons
   for subgroups. */
p[data-classid] input.edit-button {
  margin-right: 2px;
}


/* This forms two columns; disabling (as on a phone) makes just one column of 400px */
div#race-rules {
  float: left;
  height: 100%;
}

div#race-structure {
  margin-left: 410px;
  height: 100%;
}
div#new-group {
  margin-left: 1.2em;
}

/* ************* Modal for Add Class/Add Aggregate ****************/
#constituent_extension p,
#constituent_extension p span {
  font-size: medium;
}
#constituent_extension p span {
  font-weight: bold;
}

#delete_button_extension {
    padding-top: 40px;
}

#add_class_modal {
  top: 25px;
}

#add_class_modal h3 {
  margin-bottom: 0px;
  margin-top: 0px;
}

#add_class_modal label {
  display: inline-block;
  text-align: right;
  font-size: 18px;
}
#constituent-div label,
#aggregate-by-div label {
  width: 180px;
}
#aggregate-by-div {
  margin-bottom: 20px;
}

.ntrophies {
  position: relative;
  height: 55px;
  /* margin-bottom: 10px; */
}
.ntrophies label {
  display: inline-block;
  text-align: right;
  font-size: 18px;
  font-weight: bold;
  width: 150px;
}
.ntrophies .mselect {
  display: inline-block;
  position: absolute;
  right: 0px;
  font-size: 12px;
}
#add_class_modal .ntrophies label {
  margin-top: 10px;
  width: 300px;
}
#add_class_modal .ntrophies .mselect {
  right: 60px;
}
.ntrophies .mselect span {
  font-size: 20px;
  margin-right: 5px;
}
#constituent-clip {
  margin-top: 20px;
  width: 500px;
  overflow-x: hidden;
}
#constituent-div {
  width: 1100px;
}
#constituent-classes,
#constituent-subgroups {
  display: inline-block;
  width: 500px;
  transition-duration: 0.5s;
  transition-property: margin-left;
}

#add_class_modal .constituent-label {
  width: 300px;
  margin-right: 1em;
  font-size: 16px;
  font-weight: bold;
}

#aggregate-constituents .flipswitch span {
  font-size: 16px;
}

#aggregate-constituents label {
    display: inline-block;
    width: 300px;
    margin-right: 1em;
    text-align: right;
    font-weight: bold;
}

